syntax = "proto3";

option csharp_namespace = "server";

package evaluation;

service RemoteEvaluation {
  rpc EvaluateExpression (ExprRequest) returns (ExprReply);
}

message ExprRequest {
    string expr = 1;
}

message ExprReply {
    string value = 1;
}